Build a responsive survey form with modern UI/UX

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
             <!-- Submit button -->
             <button type="submit" id="submit">Submit</button>
         </form>
+
+        <footer>
+            <p>Made with ❤️ by <strong>Anotida Muchinhairi</strong></p>
+        </footer>
+
     </body>
 
 </html>
